# our_web_server

./: .gitignore  CMakeLists.txt  README.md  config.txt  config.wsc  main.cpp  name  web_server
YoupiBanane/directory/nop/: simple.html
default_error_pages/: 400.html  403.html  404.html  405.html  413.html  500.html
pages_root/: lyubaya.html  simple.html
pages_root/error_pages/: 403_error.html  404_error.html
save_directory/: loop.sh
srcs/: Bridge.cpp  Bridge.hpp  Server.cpp  Server.hpp  client.cpp  client.hpp  fd_creator.cpp  fd_creator.hpp  http_stuff.hpp  manual_types.h
srcs/Client/: client.hpp  request_data.hpp
srcs/Client/Handler/: Handler.hpp  IHandler.hpp
srcs/Client/Handler/Implementation/: Handler.cpp
srcs/Client/concrete_client_handler/: Handler.cpp  Handler.hpp
srcs/Client/concrete_client_handler/Implementation/: Handler.cpp
srcs/builders/: ResponseBuilder.cpp  ResponseBuilder.hpp
srcs/builders/autoindex/: AutoindexResonseBuilder.cpp  AutoindexResonseBuilder.hpp  HeadersBuilder.hpp
srcs/builders/cgi/: CgiExecutor.cpp  CgiExecutor.hpp
srcs/builders/error/: ErrorBuilder.cpp  ErrorBuilder.hpp
srcs/builders/methods/: Delete.cpp  Delete.hpp  Get.cpp  Get.hpp  Head.cpp  Head.hpp  Post.cpp  Post.hpp  Put.cpp  Put.hpp
srcs/builders/post_put/: Post.cpp  Post.hpp
srcs/builders/response_utils/: HeadersBuilder.cpp  HeadersBuilder.hpp  ResponseUtils.cpp  ResponseUtils.hpp
srcs/config/: ConfigParser.cpp  ConfigParser.hpp  HTTP_handler.cpp  HTTP_handler.hpp  Handler.cpp  Handler.hpp  string_dirty_work.cpp  string_dirty_work.hpp
srcs/config/Parser/: ConfigParser.hpp
srcs/config/Parser/Implementation/: ConfigParser.cpp  Section_impl.cpp
srcs/config/repository/: ConfigRepository.hpp  RouteEntity.hpp
srcs/config/repository/Implementation/: ConfigRepository.cpp  RouteEntity.cpp
srcs/utils/: CommonUtils.hpp  ParseUtils.hpp  RoutingUtils.hpp  fd_creator.hpp
srcs/utils/implementation/: CommonUtils.cpp  ParserUtils.cpp  RoutingUtils.cpp  fd_creator.cpp
srcs/utils/pure_instruments/: i_wanna_range_based_for.hpp  optional.hpp  shared_ptr.hpp
